--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "prom-client": "^15.1.0",
-    "response-time": "^2.3.2"
+    "response-time": "^2.3.2",
+    "winston": "^3.11.0",
+    "winston-loki": "^6.0.8"
   }
 }
