--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,15 @@ services:
       - 9090:9090
     volumes:
       - ./prometheus-config.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana-oss
+    ports:
+      - 3000:3000
+    volumes:
+      - ./NodeJS_Application_Dashboard-1703182108360.json:/etc/grafana/provisioning/dashboards/NodeJS_Application_Dashboard-1703182108360.json
+
+  loki:
+    image: grafana/loki
+    ports:
+      - 3100:3100
